scss/base/_buttons.scss
// ****************************************************************
// _Buttons
// ****************************************************************


/**
 * Core styles
 */
.btn {
    display:inline-block;
    vertical-align:middle;
    white-space:nowrap;
    font-family:inherit;
    font-size:100%;
    cursor:pointer;
    border:1px solid $base_btn_color;
    margin:.5rem;
    padding-top:0;
    padding-bottom:0;
    line-height:3;
    padding-right:1rem;
    padding-left: 1rem;
    background: $base_btn_background_color;
    color: $base_btn_color;
    font-family: $header_font_family;

    @if $base_border_radius {
      border-radius:$base_border_radius;
    }

    @if $button_uppercase {
      text-transform: uppercase;
    }
}

.btn {
    &:hover{
        text-decoration:none;
        background-color: $base_btn_hover_background_color;
        color : $base_btn_hover_color;
    }

    &:active,
    &:focus{
        outline:none;
    }
}


/**
 * Sizes
 */
.btn-small{
    padding-right:0.5rem;
    padding-left: 0.5rem;
    line-height:2;
}

.btn-large {
    padding-right:1.5rem;
    padding-left: 1.5rem;
    line-height:4;
}

.btn-huge {
    padding-right:2rem;
    padding-left: 2rem;
    line-height:5;
}

.btn-full {
    width:100%;
    padding-right:0;
    padding-left: 0;
    text-align:center;
}


/**
 * Colors
 */
.btn-success {
  border: 1px solid darken($success, 5);
  background-color: $success;
  &:hover {
    background-color: darken($success, 5);
  }
}

.btn-error {
  border: 1px solid darken($error, 5);
  background-color: $error;
  &:hover {
    background-color: darken($error, 5);
  }
}

.btn-warning {
  border: 1px solid darken($warning, 5);
  background-color: $warning;
  &:hover {
    background-color: darken($warning, 5);
  }
}

.btn-info {
  border: 1px solid darken($info, 5);
  background-color: $info;
  &:hover {
    background-color: darken($info, 5);
  }
}

.btn-inverse,
.btn-inverse:hover {
    background: $base_background_color;
    color: $main_color;
    border: 1px solid $base_background_color;
}

.btn-disabled,
.btn-disabled:hover,
.btn-disabled:active,
.btn-disabled:focus{
    opacity: 0.4;
    cursor:text;
}

